--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="g-doc">
     <div class="g-hd">
 		<!--不再提示-->
-        <div class="u-notice">
+        <div class="u-notice f-cb">
         	<div class="f-f1">
         		<div class="left-text">
           		<span>网易云课堂微专业，帮助你掌握专业技能，令你求职或加薪多一份独特优势！ </span>
