之前的更新

--- a/index.html
+++ b/index.html
@@ -29,14 +29,33 @@
           <div class="m-topBarContent">
             <div class="u-conLeft">
               <div class="u-conLogo"></div>
-              <div class="u-conAtten"></div>
-              <div class="u-conFans"></div>
+              <div class="u-conAtten" id="aa0">
+                <span class="userAtten">关注</span>    
+              </div>
+              <div class="u-conFans">
+                <span>粉丝</span>
+                <span class="fanNum">45</span>
+              </div>
             </div>
             <div class="u-conRight">
-              <div class="m-conNav"></div>
               <div class="m-conSearch"></div>
-            </div>
+              </div>
+              <div class="m-conNav">
+                <ul>
+                  <li><a href="#">网易公开课</a></li>
+                  <li><a href="#">云课堂</a></li>
+                  <li><a href="#">中国大学MOOC</a></li>
+                </ul>
+              </div>              
           </div>
+          <form action="http://study.163.com /webDev/ attention.htm" method="get" class="u-loginForm">
+            <span class="_closeBtn"></span>
+            <label class="_topicForm">登录网易云课堂</label>
+            <input type="text" class="_nameForm" value="studyOnline">
+            <input type="password" class="_pswForm"value="study.163.com ">
+            <input type="button" class="_loginForm" value="登录">
+          </form>
+          <div class="zoom" ></div>
         </div>
     </div>
     <div class="g-bd">
