登录框代码

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <label class="_topicForm">登录网易云课堂</label>
             <input type="text" class="_nameForm" value="studyOnline">
             <input type="password" class="_pswForm"value="study.163.com ">
-            <input type="button" class="_loginForm" value="登录">
+            <input type="button" class="_loginForm" value="">
           </form>
           <div class="zoom" ></div>
         </div>
