登录框代码

--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
           <div class="m-topBarContent">
             <div class="u-conLeft">
               <div class="u-conLogo"></div>
-              <div class="u-conAtten" id="aa0">
-                <span class="userAtten">关注</span>    
+              <div class="u-conAtten">
+                <span class="userAtten">关注</span>
+              </div>
+              <div class="u-conAttened">
+                <span class="userAttened">已关注</span>
+                <span class="cancel">取消</span>
               </div>
               <div class="u-conFans">
                 <span>粉丝</span>
@@ -72,5 +76,7 @@
 </div>
 
 <script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="js/md5.js"></script>
+
 </body>
 </html>
