登录框代码

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           <form action="http://study.163.com /webDev/ attention.htm" method="get" class="u-loginForm">
             <span class="_closeBtn"></span>
             <label class="_topicForm">登录网易云课堂</label>
+            <span class="cancelBtn"></span>
             <input type="text" class="_nameForm" value="studyOnline">
             <input type="password" class="_pswForm"value="study.163.com ">
             <input type="button" class="_loginForm" value="">
