轮播图代码

--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
           </form>
           <div class="zoom" ></div>
         </div>
+        <div class="m-slide">
+          <ul class="imgwrap">
+            <li class="active"><a href="http://open.163.com/"><img src="img/banner1.jpg"></a></li>
+            <li class="hide"><a href="http://study.163.com/"><img src="img/banner2.jpg"></a></li>
+            <li class="hide"><a href="http://www.icourse163.org/"><img src="img/banner3.jpg"></a></li>
+          </ul>
+          <div class="contBtn">
+            <span class="circleBtn"><i class="contBtnCol"></i></span>
+            <span class="circleBtn"><i></i></span>
+            <span class="circleBtn"><i></i></span>
+          </div>
+        </div>
     </div>
     <div class="g-bd">
         <div class="g-mn">
