--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                   <div class="m-intro-cont">推出国内外名校公开课，涉及广泛的学科，名校老师认真讲解深度剖析，网易视频公开课频道搭建起强有力的网络视频教学平台。</div>
                   <div class="m-intro-more"><a href="http://open.163.com/">了解更多 ></a></div>                 
                 </div>
-                <div class="m-intro-f2">
+                <div class="m-intro-f2"> 
                   <div class="m-intro-logo"></div>
                   <div class="m-intro-topic">云课堂</div>
                   <div class="m-intro-cont">网易旗下大型在线学习平台，该平台面向学习者提供海量免费、优质课程,创新的个性化学习体验，自由开放的交流互动环境。</div>
@@ -95,6 +95,15 @@
                   <div class="m-intro-topic">中国大学MOOC</div>
                   <div class="m-intro-cont">是爱课程网携手云课堂打造的在线学习平台，每一个有提升愿望的人,都可以在这里学习中国最好的大学课程，学完还能获得认证证书。</div>
                   <div class="m-intro-more"><a href="http://www.icourse163.org/">了解更多 ></a></div>
+                </div>
+              </div>
+              <div class="u-showPic">
+                <div class="imgs f-cb">
+                  <img src="img/img-1.jpg">
+                  <img src="img/img-2.jpg">
+                  <img src="img/img-3.jpg">
+                  <img src="img/img-4.jpg">
+                  <img src="img/img-5.jpg">
                 </div>
               </div>
         </div>
