--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
-<body>
+<body style="height: 3000px;">
     <div class="g-doc">
     <div class="g-hd">
     <!--不再提示-->
@@ -116,7 +116,24 @@
                        <li><a href="#">编程语言</a></li>
                      </ul>
                    </div>
-                   <div class="u-courList"></div>
+                   <div class="u-courList f-cb">                      <div class="courBox">
+                        <div class="u-course">
+                        <a href="#" class="courLink">
+                           <div class="coursef1">
+                            <div class="courseShow">
+                              <div class="courPic"></div>
+                              <div class="courName"></div>
+                              <div class="courProvider"></div>
+                              <div class="courLeaner"></div>
+                              <div class="courPrice"></div>
+                            </div>
+                            <div class="courseOver"></div>
+                          </div>
+                        </a>
+                         
+                        </div>
+                      </div>
+                   </div>
                 </div>                   
                    <div class="u-proIntro">
                      <div class="proIntroVideo">
@@ -142,7 +159,7 @@
   <div class="m-playerBox">
     <div class="playerBtn"></div>
     <h3>请观看下面的视频</h3>
-    <video controls="controls"  class="playerVideo" src="http://mov.bn.netease.com/open-movie/nos/mp4/2014/12/30/SADQ86F5S_shd.mp4">您的浏览器不支持 video 标签。</video>
+    <video class="playerVideo" src="http://mov.bn.netease.com/open-movie/nos/mp4/2014/12/30/SADQ86F5S_shd.mp4"  controls="controls">您的浏览器不支持 video 标签。</video>
   </div>
   <div class="u-bg"></div>
 </div>
