--- a/index.html
+++ b/index.html
@@ -116,21 +116,22 @@
                        <li><a href="#">编程语言</a></li>
                      </ul>
                    </div>
-                   <div class="u-courList f-cb">                      <div class="courBox">
+                   <div class="u-courList f-cb">
+                   <div class="courBox">
                         <div class="u-course">
-                        <a href="#" class="courLink">
-                           <div class="coursef1">
-                            <div class="courseShow">
-                              <div class="courPic"></div>
-                              <div class="courName"></div>
-                              <div class="courProvider"></div>
-                              <div class="courLeaner"></div>
-                              <div class="courPrice"></div>
-                            </div>
-                            <div class="courseOver"></div>
-                          </div>
-                        </a>
-                         
+                          <ul id="okdklkd"></ul>  
+                          <ul class="courseNum">
+                            <span class="courseNum-pre"></span>
+                            <li>1</li>
+                            <li>2</li>
+                            <li>3</li>
+                            <li>4</li>
+                            <li>5</li>
+                            <li>6</li>
+                            <li>7</li>
+                            <li>8</li>
+                            <span class="courseNum-next"></span>
+                          </ul>                       
                         </div>
                       </div>
                    </div>
@@ -140,8 +141,76 @@
                        <div>机构介绍</div>
                        <div>观看下面的视频来了解吧 :</div>
                        <div class="proIntroVideo-f1"></div>
+
                      </div>
-                     <div class="proIntroHot"></div>
+                     <div class="proIntroHot">
+                       <div class="hot-f1">最热排名</div>
+                       <div id="hotList">
+                         <div class="m-top">
+                         <div class="toplist">
+                            <div class="topi"><img src="" width="50px" height="50px" class="f-fl">
+                                <div class="topdetail f-fr">
+                                    <div class="detailtt">
+                                        <a class="f-thide"></a>
+                                    </div><span class="tophot"></span></div>
+                            </div>
+                            <div class="topi"><img src="" width="50px" height="50px" class="f-fl">
+                                <div class="topdetail f-fr">
+                                    <div class="detailtt">
+                                        <a class="f-thide"></a>
+                                    </div><span class="tophot"></span></div>
+                            </div>
+                            <div class="topi"><img src="" width="50px" height="50px" class="f-fl">
+                                <div class="topdetail f-fr">
+                                    <div class="detailtt">
+                                        <a class="f-thide"></a>
+                                    </div><span class="tophot"></span></div>
+                            </div>
+                            <div class="topi"><img src="" width="50px" height="50px" class="f-fl">
+                                <div class="topdetail f-fr">
+                                    <div class="detailtt">
+                                        <a class="f-thide"></a>
+                                    </div><span class="tophot"></span></div>
+                            </div>
+                            <div class="topi"><img src="" width="50px" height="50px" class="f-fl">
+                                <div class="topdetail f-fr">
+                                    <div class="detailtt">
+                                        <a class="f-thide"></a>
+                                    </div><span class="tophot"></span></div>
+                            </div>
+                            <div class="topi"><img src="" width="50px" height="50px" class="f-fl">
+                                <div class="topdetail f-fr">
+                                    <div class="detailtt">
+                                        <a class="f-thide"></a>
+                                    </div><span class="tophot"></span></div>
+                            </div>
+                            <div class="topi"><img src="" width="50px" height="50px" class="f-fl">
+                                <div class="topdetail f-fr">
+                                    <div class="detailtt">
+                                        <a class="f-thide"></a>
+                                    </div><span class="tophot"></span></div>
+                            </div>
+                            <div class="topi"><img src="" width="50px" height="50px" class="f-fl">
+                                <div class="topdetail f-fr">
+                                    <div class="detailtt">
+                                        <a class="f-thide"></a>
+                                    </div><span class="tophot"></span></div>
+                            </div>
+                            <div class="topi"><img src="" width="50px" height="50px" class="f-fl">
+                                <div class="topdetail f-fr">
+                                    <div class="detailtt">
+                                        <a class="f-thide"></a>
+                                    </div><span class="tophot"></span></div>
+                            </div>
+                            <div class="topi"><img src="" width="50px" height="50px" class="f-fl">
+                                <div class="topdetail f-fr">
+                                    <div class="detailtt">
+                                        <a class="f-thide"></a>
+                                    </div><span class="tophot"></span></div>
+                            </div>
+                        </div>
+                       </div>
+                     </div>
                    </div>
                 </div>                 
               </div>
